--- a/Inicio.html
+++ b/Inicio.html
@@ -49,7 +49,7 @@
                         <a class="nav-link" href="#">Oferta Educativa</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Campus y establecimientos</a>
+                        <a class="nav-link" href="/vistas/campus.php">Campus</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Extras</a>
