--- a/Inicio.html
+++ b/Inicio.html
@@ -30,7 +30,7 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">Universidad IndustryPower</a>
+            <a class="navbar-brand" link rel="shortcut icon" href="imagenes/logo.ico">Universidad IndustryPower</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -38,21 +38,24 @@
             <div class="collapse navbar-collapse" id="navbarColor01">
                 <ul class="navbar-nav me-auto">
                     <li class="nav-item">
-                        <a class="nav-link active" href="#">Quienes somos
+                        <a class="nav-link active" href="#">Educacion incluyente
                   <span class="visually-hidden"></span>
                 </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Contacto </a>
+                        <a class="nav-link" href="#">Quienes Somos</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Oferta Educativa</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Campus y establecimientos</a>
+                        <a class="nav-link" href="#">Vida estudiantil</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Extras</a>
+                        <a class="nav-link" href="#">Utsc Virtual</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Vinculacion</a>
                     </li>
                 </ul>
                 <form class="d-flex">
