--- a/Inicio.html
+++ b/Inicio.html
@@ -30,7 +30,7 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
         <div class="container-fluid">
-            <a class="navbar-brand" link rel="shortcut icon" href="imagenes/logo.ico">Universidad IndustryPower</a>
+            <a class="navbar-brand" style="font-size:40px;">Universidad IndustryPower</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
