Se agrego pagina Vida_Estudiantil Rosalinda Maldonado

--- a/Inicio.html
+++ b/Inicio.html
@@ -38,7 +38,7 @@
             <div class="collapse navbar-collapse" id="navbarColor01">
                 <ul class="navbar-nav me-auto">
                     <li class="nav-item">
-                        <a class="nav-link active" href="#">Educacion incluyente
+                        <a class="nav-link" href="#">Educación incluyente
                   <span class="visually-hidden"></span>
                 </a>
                     </li>
@@ -49,10 +49,10 @@
                         <a class="nav-link" href="#">Oferta Educativa</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Vida estudiantil</a>
+                        <a class="nav-link" href="vistas/vida_estudiantil.html">Vida estudiantil</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Utsc Virtual</a>
+                        <a class="nav-link" href="">Utsc Virtual</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Vinculacion</a>
