Se agrero el link de mi vista a la pagina de inicio - Oscar Gallegos Alvarado

--- a/Inicio.html
+++ b/Inicio.html
@@ -52,7 +52,7 @@
                         <a class="nav-link" href="vistas/vida_estudiantil.html">Vida estudiantil</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="">Utsc Virtual</a>
+                        <a class="nav-link" href="vistas/Utsc_virtual.html">Utsc Virtual</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Vinculacion</a>
