--- a/vistas/ofertaEducativa.html
+++ b/vistas/ofertaEducativa.html
@@ -66,6 +66,44 @@
         </div>
     </nav>
 
+    <div class="container">
+        <h2>Hoverable Dark Table</h2>
+        <p>The .table-hover class adds a hover effect (grey background color) on table rows:</p>
+        <table class="table table-dark table-hover">
+            <thead>
+                <tr>
+                    <th>CARRERA</th>
+                    <th>PLAN DE ESTUDIOS</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>Licenciatura en Gestión Institucional Educativa y Curricular</td>
+                    <td><button id="1" type="button" class="btn btn-primary">Click</button></td>
+                </tr>
+                <tr>
+                    <td>Licenciatura en Innovación de Negocios y Mercadotecnia</td>
+                    <td><button id="2" type="button" class="btn btn-primary">Click</button></td>
+                </tr>
+                <tr>
+                    <td>Mantenimiento Industrial</td>
+                    <td><button id="3" type="button" class="btn btn-primary">Click</button></td>
+                    <tr>
+                        <td>Sistemas Productivos</td>
+                        <td><button id="4" type="button" class="btn btn-primary">Click</button></td>
+                    </tr>
+                    <tr>
+                        <td>Mecatrónica</td>
+                        <td><button id="5" type="button" class="btn btn-primary">Click</button></td>
+                    </tr>
+                    <tr>
+                        <td>Ingeniería en Desarrollo y Gestión de Software</td>
+                        <td><button id="6" type="button" class="btn btn-primary">Click</button></td>
+                    </tr>
+                </tr>
+            </tbody>
+        </table>
+    </div>
 </body>
 
 </html>
