--- a/Inicio.html
+++ b/Inicio.html
@@ -46,7 +46,7 @@
                         <a class="nav-link" href="#">Quienes Somos</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Oferta Educativa</a>
+                        <a class="nav-link" href="vistas/ofertaEducativa.html">Oferta Educativa</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="vistas/vida_estudiantil.html">Vida estudiantil</a>
