--- a/vistas/ofertaEducativa.html
+++ b/vistas/ofertaEducativa.html
@@ -30,30 +30,36 @@
             <div class="collapse navbar-collapse" id="navbarColor01">
                 <ul class="navbar-nav me-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Educación incluyente
+                        <a class="nav-link" href="../inicio.html">Inicio
                   <span class="visually-hidden"></span>
                 </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Quienes Somos</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Oferta Educativa</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/vida_estudiantil.html">Vida estudiantil</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/Utsc_virtual.html">Utsc Virtual</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Vinculacion</a>
-                    </li>
-                </ul>
-                <form class="d-flex">
-                    <input class="form-control me-sm-2" type="text" placeholder="Buscar">
-                    <button class="btn btn-dark my-2 my-sm-0" type="submit">Buscar</button>
-                </form>
+
+                        <ul class="navbar-nav me-auto">
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Educación incluyente
+                  <span class="visually-hidden"></span>
+                </a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Quienes Somos</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Oferta Educativa</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="/vida_estudiantil.html">Vida estudiantil</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="/Utsc_virtual.html">Utsc Virtual</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Vinculacion</a>
+                            </li>
+                        </ul>
+                        <form class="d-flex">
+                            <input class="form-control me-sm-2" type="text" placeholder="Buscar">
+                            <button class="btn btn-dark my-2 my-sm-0" type="submit">Buscar</button>
+                        </form>
             </div>
         </div>
     </nav>
