--- a/vistas/ofertaEducativa.html
+++ b/vistas/ofertaEducativa.html
@@ -65,8 +65,8 @@
     </nav>
 
     <div class="container">
-        <h2>Hoverable Dark Table</h2>
-        <p>The .table-hover class adds a hover effect (grey background color) on table rows:</p>
+        <h2>Oferta Educativa</h2>
+        <p>Tabla de carreras y plan de estudios UTSC</p>
         <table class="table table-dark table-hover">
             <thead>
                 <tr>
