--- a/vistas/ofertaEducativa.html
+++ b/vistas/ofertaEducativa.html
@@ -43,10 +43,10 @@
                         <a class="nav-link" href="#">Oferta Educativa</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/vida_estudiantil.html">Vida estudiantil</a>
+                        <a class="nav-link" href="vida_estudiantil.html">Vida estudiantil</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/Utsc_virtual.html">Utsc Virtual</a>
+                        <a class="nav-link" href="Utsc_virtual.html">Utsc Virtual</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Vinculacion</a>
