--- a/vistas/ofertaEducativa.html
+++ b/vistas/ofertaEducativa.html
@@ -32,9 +32,12 @@
 
                 <ul class="navbar-nav me-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Educación incluyente
+                        <a class="nav-link" href="../inicio.html">Inicio
                             <span class="visually-hidden"></span>
                                 </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Educación incluyente</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Quienes Somos</a>
