--- a/vistas/ofertaEducativa.html
+++ b/vistas/ofertaEducativa.html
@@ -32,7 +32,7 @@
 
                 <ul class="navbar-nav me-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="../../blob/main/Inicio.html">Inicio
+                        <a class="nav-link" href="https://htmlpreview.github.io/?https://github.com/Citly98/IndustryPower/blob/main/Inicio.html">Inicio
                             <span class="visually-hidden"></span>
                                 </a>
                     </li>
