Cambio al Footer

--- a/vistas/ofertaEducativa.html
+++ b/vistas/ofertaEducativa.html
@@ -101,6 +101,80 @@
             </tbody>
         </table>
     </div>
+
+    <div class="footer">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6 col-lg-4">
+                    <div class="footer-about">
+                        <h2>Contactos directos</h2>
+                        <p>
+                            Nos adaptamos a estilos de vida ocupados que necesitan clases con horarios flexibles
+                        </p>
+                    </div>
+                </div>
+                <div class="col-md-6 col-lg-8">
+                    <div class="row">
+                        <div class="col-md-6 col-lg-4">
+                            <div class="footer-link">
+                                <h2>Areas de especialidad</h2>
+                                <a href="">Tecnologias de la informacion</a>
+                                <a href="">Desarrollo de negocios</a>
+                                <a href="">Procesos industriales</a>
+                                <a href="">Mecatronica</a>
+                                <a href="">Mantenimiento</a>
+                            </div>
+                        </div>
+                        <div class="col-md-6 col-lg-4">
+                            <div class="footer-link">
+                                <h2>Modalidades/Horarios</h2>
+                                <a href="">Matutino</a>
+                                <a href="">Matutino despresurizado</a>
+                                <a href="">Vespertino</a>
+                                <a href="">Vespertino despresurizado</a>
+                                <a href="">Nocturno</a>
+                            </div>
+                        </div>
+                        <div class="col-md-6 col-lg-4">
+                            <div class="footer-contact">
+                                <h2>Informacion en un toque...</h2>
+                                <p><i class="fa fa-map-marker-alt"></i>Carretera, Santa Catarina NL</p>
+                                <p><i class="fa fa-phone-alt"></i>+012 345 67890</p>
+                                <p><i class="fa fa-envelope"></i>info@industrypower.com</p>
+                                <div class="footer-social">
+                                    <a href=""><i class="fab fa-twitter"></i></a>
+                                    <a href=""><i class="fab fa-facebook-f"></i></a>
+                                    <a href=""><i class="fab fa-youtube"></i></a>
+                                    <a href=""><i class="fab fa-instagram"></i></a>
+                                    <a href=""><i class="fab fa-linkedin-in"></i></a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="container footer-menu">
+            <div class="f-menu">
+                <a href="">Terms of use</a>
+                <a href="">Privacy policy</a>
+                <a href="">Cookies</a>
+                <a href="">Help</a>
+
+            </div>
+        </div>
+        <div class="container copyright">
+            <div class="row">
+                <div class="col-md-6">
+                    <p>&copy; <a href="https://htmlcodex.com/law-firm-website-template">HTML IndustryPower</a>, All Right Reserved.</p>
+                </div>
+                <div class="col-md-6">
+                    <p>Designed By <a href="">IndustryPower</a></p>
+                </div>
+            </div>
+        </div>
+    </div>
+
 </body>
 
 </html>
