--- a/vistas/quienes_somos.html
+++ b/vistas/quienes_somos.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="imagenes/logo.ico">
-    <title>Univesidad</title>
+    <title>UTSC Virtual</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
@@ -14,16 +14,11 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
-    <link rel="stylesheet" href="css/estilo.css">
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="../css/estilo.css">
+    <link rel="stylesheet" href="../css/style.css">
+
     <style>
-        /* Make the image fully responsive */
-        
-        .carousel-inner img {
-            width: 100%;
-            height: 1%;
-        }
+
     </style>
 </head>
 
@@ -38,21 +33,21 @@
             <div class="collapse navbar-collapse" id="navbarColor01">
                 <ul class="navbar-nav me-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Educación incluyente
+                        <a class="nav-link " href="#">Educacion incluyente
                   <span class="visually-hidden"></span>
                 </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="vistas/quienes_somos.html">Quienes Somos</a>
+                        <a class="nav-link" href="#">Quienes Somos</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="vistas/ofertaEducativa.html">Oferta Educativa</a>
+                        <a class="nav-link" href="#">Oferta Educativa</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="vistas/vida_estudiantil.html">Vida estudiantil</a>
+                        <a class="nav-link" href="#">Vida estudiantil</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="vistas/Utsc_virtual.html">Utsc Virtual</a>
+                        <a class="nav-link" href="../vistas/Utsc_virtual.html">Utsc Virtual</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Vinculacion</a>
@@ -65,67 +60,24 @@
             </div>
         </div>
     </nav>
-    <div id="demo" class="carousel slide" data-ride="carousel">
 
-        <!-- Indicators -->
-        <ul class="carousel-indicators">
-            <li data-target="#demo" data-slide-to="0" class="active"></li>
-            <li data-target="#demo" data-slide-to="1"></li>
-            <li data-target="#demo" data-slide-to="2"></li>
-        </ul>
-
-        <!-- The slideshow -->
-        <div class="carousel-inner">
-            <div class="carousel-item active">
-                <img src="imagenes/car1.jpg" alt="" width="100" height="80">
-            </div>
-            <div class="carousel-item">
-                <img src="imagenes/op4.JPG" alt="" width="100" height="80">
-            </div>
-            <div class="carousel-item">
-                <img src="imagenes/op5.JPG" alt="" width="100" height="80">
-            </div>
-        </div>
-
-        <!-- Left and right controls -->
-        <a class="carousel-control-prev" href="#demo" data-slide="prev">
-            <span class="carousel-control-prev-icon"></span>
-        </a>
-        <a class="carousel-control-next" href="#demo" data-slide="next">
-            <span class="carousel-control-next-icon"></span>
-        </a>
+    <!-- dar a conocer quienes somos -->
+    <div>
+        <img src="imagenes/somos.jpg" alt="" width="100" height="80">
     </div>
-    <!-- About Start -->
-    <div class="about">
-        <div class="container">
-            <div class="row align-items-center">
-                <div class="col-lg-5 col-md-6">
-                    <div class="about-img">
-                        <img src="imagenes/car2.jpg" width="80%" height="80%" alt="Image">
-                    </div>
-                </div>
-                <br>
-                <br>
-                <div class="col-lg-7 col-md-6">
-                    <div class="section-header">
-                        <h2>Conocenos</h2>
-                    </div>
-                    <div class="about-text">
-                        <p>
-                            Es la interacción entre las instituciones educativas con el entorno económico, social, gubernamental y educativo. Constituye la plataforma desde la cual el Subsistema de Universidades Tecnológicas teje su red de contactos con el universo del cual surge,
-                            y para cuyo desarrollo fue diseñado.
-                        </p>
-                        <p>
-                            En el marco del modelo educativo de las Universidades Tecnológicas que es 70% practico - 30 % teórico, a través de la vinculación con los diferentes sectores se establecen las colaboraciones en cuanto a espacios, actividades y proyectos donde los estudiantes
-                            desarrollen competencias para su éxito profesional...
-                        </p>
-                        <a class="btn" href="">Conoce mas...</a>
-                    </div>
-                </div>
-            </div>
+
+    <div class="col-md-9">
+        <h1><strong style="color:#6f6559;">Mensaje</strong></h1>
+        <div>
+            <p>La Universidad Tecnológica IndustryPower nació en 1998 con la vocación de proporcionar a sus estudiantes una preparación profesional como Técnico Superior Universitario (TSU), particularmente en las áreas demandadas por las industrias cercanas
+                a nuestras instalaciones.</p>
+            <p>Durante estos años, además, ha ampliado sus planes de estudio hasta el grado de Ingeniería como una continuación de las carreras de TSU que forman su oferta educativa.</p>
+            <p>Se ha consolidado adicionalmente como una de las primeras instituciones capaces de ofrecer un Modelo de Inclusión Educativa y Laboral para Personas con Discapacidad en América.</p>
+            <p>Por todo lo anterior, me siento muy honrada en dirigir esta comunidad universitaria y dar a todos ustedes la bienvenida a nuestra casa de estudios, estaremos todos en la mejor disposición de apoyarlos para que lleguen a feliz término en su
+                formación profesional y posterior inserción en el mercado laboral.</p>
+            <p>¡Mucho éxito!</p>
         </div>
     </div>
-    <!-- About End -->
 
     <!-- Footer Inicio pie de pagina -->
     <div class="footer">
