--- a/vistas/quienes_somos.html
+++ b/vistas/quienes_somos.html
@@ -38,13 +38,13 @@
                 </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Quienes Somos</a>
+                        <a class="nav-link" href="../vistas/quienes_somos.html">Quienes Somos</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Oferta Educativa</a>
+                        <a class="nav-link" href="../vistas/ofertaEducativa.html">Oferta Educativa</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Vida estudiantil</a>
+                        <a class="nav-link" href="../vistas/vida_estudiantil.html">Vida estudiantil</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="../vistas/Utsc_virtual.html">Utsc Virtual</a>
@@ -63,19 +63,19 @@
 
     <!-- dar a conocer quienes somos -->
     <div>
-        <img src="imagenes/somos.jpg" alt="" width="100" height="80">
+        <img src="../imagenes\somos.jpg" alt="" width="250" height="180">
     </div>
 
     <div class="col-md-9">
         <h1><strong style="color:#6f6559;">Mensaje</strong></h1>
         <div>
-            <p>La Universidad Tecnológica IndustryPower nació en 1998 con la vocación de proporcionar a sus estudiantes una preparación profesional como Técnico Superior Universitario (TSU), particularmente en las áreas demandadas por las industrias cercanas
+            <p style="color:#0f0f0f;">La Universidad Tecnológica IndustryPower nació en 1998 con la vocación de proporcionar a sus estudiantes una preparación profesional como Técnico Superior Universitario (TSU), particularmente en las áreas demandadas por las industrias cercanas
                 a nuestras instalaciones.</p>
-            <p>Durante estos años, además, ha ampliado sus planes de estudio hasta el grado de Ingeniería como una continuación de las carreras de TSU que forman su oferta educativa.</p>
-            <p>Se ha consolidado adicionalmente como una de las primeras instituciones capaces de ofrecer un Modelo de Inclusión Educativa y Laboral para Personas con Discapacidad en América.</p>
-            <p>Por todo lo anterior, me siento muy honrada en dirigir esta comunidad universitaria y dar a todos ustedes la bienvenida a nuestra casa de estudios, estaremos todos en la mejor disposición de apoyarlos para que lleguen a feliz término en su
+            <p style="color:#0f0f0f;">Durante estos años, además, ha ampliado sus planes de estudio hasta el grado de Ingeniería como una continuación de las carreras de TSU que forman su oferta educativa.</p>
+            <p style="color:#0f0f0f;">Se ha consolidado adicionalmente como una de las primeras instituciones capaces de ofrecer un Modelo de Inclusión Educativa y Laboral para Personas con Discapacidad en América.</p>
+            <p style="color:#0f0f0f;">Por todo lo anterior, me siento muy honrada en dirigir esta comunidad universitaria y dar a todos ustedes la bienvenida a nuestra casa de estudios, estaremos todos en la mejor disposición de apoyarlos para que lleguen a feliz término en su
                 formación profesional y posterior inserción en el mercado laboral.</p>
-            <p>¡Mucho éxito!</p>
+            <p style="color:blue;">¡Mucho éxito!</p>
         </div>
     </div>
 
