--- a/Inicio.html
+++ b/Inicio.html
@@ -43,16 +43,16 @@
                 </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="vistas/quienes_somos.html">Quienes Somos</a>
+                        <a class="nav-link" href="../vistas/quienes_somos.html">Quienes Somos</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="vistas/ofertaEducativa.html">Oferta Educativa</a>
+                        <a class="nav-link" href="../vistas/ofertaEducativa.html">Oferta Educativa</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="vistas/vida_estudiantil.html">Vida estudiantil</a>
+                        <a class="nav-link" href="../vistas/vida_estudiantil.html">Vida estudiantil</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="vistas/Utsc_virtual.html">Utsc Virtual</a>
+                        <a class="nav-link" href="../vistas/Utsc_virtual.html">Utsc Virtual</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Vinculacion</a>
