--- a/vistas/Utsc_virtual.html
+++ b/vistas/Utsc_virtual.html
@@ -38,13 +38,13 @@
                 </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Quienes Somos</a>
+                        <a class="nav-link" href="vistas/quienes_somos.html">Quienes Somos</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Oferta Educativa</a>
+                        <a class="nav-link" href="../vistas/ofertaEducativa.html">Oferta Educativa</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Vida estudiantil</a>
+                        <a class="nav-link" href="../vistas/vida_estudiantil.html">Vida estudiantil</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="../vistas/Utsc_virtual.html">Utsc Virtual</a>
