--- a/vistas/ofertaEducativa.html
+++ b/vistas/ofertaEducativa.html
@@ -40,7 +40,7 @@
                         <a class="nav-link" href="#">Educación incluyente</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Quienes Somos</a>
+                        <a class="nav-link" href="vistas/quienes_somos.html">Quienes Somos</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Oferta Educativa</a>
