--- a/Inicio.html
+++ b/Inicio.html
@@ -55,8 +55,10 @@
                         <a class="nav-link" href="../vistas/Utsc_virtual.html">Utsc Virtual</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Vinculacion</a>
-                    </li>
+                        <a class="nav-link" href="../vistas/educacion_incluyente.html">Utsc Virtual</a>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Vinculacion</a>
+                        </li>
                 </ul>
                 <form class="d-flex">
                     <input class="form-control me-sm-2" type="text" placeholder="Search">
