--- a/Inicio.html
+++ b/Inicio.html
@@ -55,7 +55,7 @@
                         <a class="nav-link" href="../vistas/Utsc_virtual.html">Utsc Virtual</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="../vistas/educacion_incluyente.html">Utsc Virtual</a>
+                        <a class="nav-link" href="../vistas/educacion_incluyente.html">educacion incluyente</a>
                         <li class="nav-item">
                             <a class="nav-link" href="#">Vinculacion</a>
                         </li>
