--- a/vistas/educacion_incluyente.html
+++ b/vistas/educacion_incluyente.html
@@ -53,25 +53,25 @@ La inclusión, en términos de educación,es un proceso mediante el cual todos l
 </FONT></p>
 <br><br>
 <p style="text-align: right;">
-<img src="img/inclusion.JPEG" width="500" height="300"></p>
+<img src="imagenes/inclusion.JPEG" width="500" height="300"></p>
 
 <h2>INTEGRACIÒN</h2>
 
 La educación es un derecho humano y para garantizar que las personas con discapacidad puedan disfrutar de él, es necesario emprender acciones de inclusión educativa. El supuesto básico que el sistema escolar debe adaptarse a la diversidad de los alumnos en lugar de que ellos deban adaptarse a un sistema escolar integrándose a él.
 
-<img src="img/inclusion2.JPEG" width="500" height="200"></p>
+<img src="imagenes/inclusion2.JPEG" width="500" height="200"></p>
 
 <h2>DISEÑO UNIVERSAL</h2>
 
 La educación inclusiva significa que todos los niño/as y jóvenes, con y sin discapacidad o dificultades, aprenden juntos en las diversas instituciones educativas regulares (preescolar, colegio/escuela, post secundaria y universidades) con un área de soportes apropiada. 
 Más que el tipo de institución educativa a la que asisten los niño/as, tiene que ver con la calidad de la experiencia; con la forma de apoyar su aprendizaje, sus logros y su participación total en la vida de la institución.
 <p style="text-align: right;">
-<img src="img/inclusion3.JPEG" width="500" height="200" aling="left">
+<img src="imagenes/inclusion3.JPEG" width="500" height="200" aling="left">
 </hr>
 </p>
 <center>
 <h1>contacto</h1>
-<img src="img/contacto.png" alling ="right" width="350" height="100">
+<img src="imagenes/contacto.png" alling ="right" width="350" height="100">
 </center>
 </body>
 </html>
